# AIO-SDMS

./: .gitignore  Architecture.md  Contributing.md  License  MIGRATION_GUIDE.md  README.md  config.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
core/: __init__.py
core/battery/: battery_monitor.py
core/common/: config.py
core/diagnostics/: hardware_tests.py
core/monitoring/: system_monitor.py
core/package_mgmt/: winget_manager.py
docs/: I&S_LINUX.md  LINUX_SETUP.md  README_LINUX.md  SRS.md  WEB_INTERFACE_GUIDE.md  WEB_README.md  requirements-linux.txt  requirements.txt
interfaces/: __init__.py
interfaces/cli/: cli_interface.py
interfaces/gui/: gui_interface.py
interfaces/web/: main.css  web_interface.py
interfaces/web/static/css/: battery.css  dashboard.css
interfaces/web/static/js/: diagnostics.js  packages.js
interfaces/web/templates/: dashboard.html  diagnostics.html
scripts/: setup.sh  verify_installation.py
src/aio_sdms/: __init__.py  __main__.py  cli.py
src/aio_sdms/core/battery/: __init__.py  battery_monitor.py
src/aio_sdms/core/common/: __init__.py  logger.py  performance_graph.py  tray_manager.py
src/aio_sdms/core/diagnostics/: __init__.py  hardware_tests.py
src/aio_sdms/core/monitoring/: __init__.py  system_monitor.py
src/aio_sdms/core/package_mgmt/: __init__.py  winget_manager.py
src/aio_sdms/models/: __init__.py
src/aio_sdms/services/: __init__.py
src/aio_sdms/ui/: __init__.py
src/aio_sdms/ui/cli/: cli_interface.py
src/aio_sdms/ui/gui/: __init__.py  gui_interface.py
src/aio_sdms/ui/web/: INTEGRATION_COMPLETE.md  app.js  index.html  standalone_server.py  test_integration.html  web_interface.py
src/aio_sdms/ui/web/static/js/: battery.js  dashboard.js  monitoring.js
src/aio_sdms/ui/web/templates/: battery.html  monitoring.html  packages.html
src/aio_sdms/utils/: dependency_checker.py  notifications.py  performance_monitor.py  report_exporter.py  theme_manager.py  utils.py
tests/: README.md  __init__.py
tests/unit/: run_all_tests.ipynb  test_dependency_checker.ipynb  test_notifications.ipynb  test_performance_monitor.ipynb  test_report_exporter.ipynb  test_theme_manager.ipynb
